put on dark mode, fixed the post feed+ ZOOM thingy

--- a/src/sass/imports/_general.scss
+++ b/src/sass/imports/_general.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background: #fff;
+  background: #222
   color: _palette(primary);
   line-height: 1.66667;
   -webkit-font-smoothing: antialiased;
