--- a/src/sass/imports/_header.scss
+++ b/src/sass/imports/_header.scss
@@ -2,7 +2,7 @@
  * Site Header
  */
 .site-header {
-  background: #fff;
+  background: #222;
   border-top: 5px solid _palette(accent);
   border-bottom: 1px solid _palette(border);
   padding-bottom: 1.33333em;
@@ -25,7 +25,7 @@
 
   a {
     border: 0;
-    color: inherit;
+    color: _palette(meta);
   }
 }
 
