--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,8 +7,8 @@ $font: (
 // Palette.
 $palette: (
   primary:       #536171,
-  secondary:     darken(#536171, 15%),
-  meta:          lighten(#536171, 25%),
+  secondary:     #fff,
+  meta:          #fff,
   border:        lighten(#536171, 52%),
   bg:            lighten(#536171, 58%),
   accent:        #b2a899,
